Refactored switch-statement that handles game score.

--- a/BlazorWebAppNet8_Tennis/Components/Pages/ShowTennisScore.razor
+++ b/BlazorWebAppNet8_Tennis/Components/Pages/ShowTennisScore.razor
@@ -164,7 +164,7 @@ border-width: 5px;
         SetsToWin = 3
     };
 
-    private string PointsText = "Love-Love";
+    private string PointsText = "Love - All";
     private string P1Total = "0";
     private string P2Total = "0";
     private string P1Sets = "  | 0";
